<resources>
    <string name="app_name">MovieCatalog5</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="movie_not_found">Movie doesn\'t exist!</string>
    <string name="lbl_synopsis">Synopsis</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="favorite_tv_show">Favorite TV Show</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="notification_intro">Activate Daily Reminder to receive notification of your beloved Movie Catalog everyday.
        \nActivate Release Today reminder to receive notification of freshly release movies.
        \nDon\'t worry, you can disable anytime!</string>
</resources>
