<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_movie"
            android:icon="@drawable/ic_movie"
            android:title="@string/movie" />
        <item
            android:id="@+id/nav_tv_show"
            android:icon="@drawable/ic_tv_show"
            android:title="@string/tv_show" />
        <item
            android:id="@+id/nav_fav_movie"
            android:icon="@drawable/ic_fav_movie"
            android:title="@string/favorite_movie" />
        <item
            android:id="@+id/nav_fav_tv_show"
            android:icon="@drawable/ic_fav_tv_show"
            android:title="@string/favorite_tv_show" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
